added enter key and special keys functionalities and line break in text box v4

--- a/src/components/Keyboard/keyboard.scss
+++ b/src/components/Keyboard/keyboard.scss
@@ -1,36 +1,11 @@
 
 
-.keyShift {
+.keyShift, .keyBackspace,.keySpacebar,.keyTab,.keyCaps, .key⏎ {
   flex-basis: 100%;
-  background: #6783ff !important;
-  color: white;
+  //background: #ffffff !important;
+  //color: white;
 }
-.keyEnter  {
-  //flex: 1;
-  flex-basis: 100%;
-  background: #ac8dff !important;
-  color: white;
-}
-.keyCaps{
-  flex-basis: 100%;
-  background: #6783ff !important;
-  color: white;
-}
-.keyTab {
-  flex-basis: 100%;
-  background: #6783ff !important;
-  color: white;
-}
-.keySpacebar{
-  flex-basis: 100%;
-  background: #ac8dff !important;
-  color: white;
-}
-.keybackspace{
-  flex-basis: 100%;
-  background: #ac8dff !important;
-  color: white;
-}
+
 
 .hands{
   display: flex;
