--- a/src/src/pages/TypingPage/TypingPage.scss
+++ b/src/src/pages/TypingPage/TypingPage.scss
@@ -209,7 +209,7 @@ p, h1,h2,h3{
 .modal{
   width: 100%;
   opacity: 0;
-  background: #ffffff;
+  background: #474bff12;
   transform: translateY(-100vh);
   transition: all .5s ease;
   border-radius: 5px;
