--- a/src/pages/TypingPage/TypingPage.scss
+++ b/src/pages/TypingPage/TypingPage.scss
@@ -243,3 +243,19 @@ input{
   margin: 0;
   padding: 10px !important;
 }
+
+.glass-card{
+  background: rgba(255, 255, 255, 0.21);
+  border-radius: 7px;
+  width: max-content;
+  padding: 5px 20px;
+  margin: 0 auto 10px;
+  border: 2px solid rgba(253, 253, 253, 0.29);
+  backdrop-filter: blur(40px);
+}
+
+.error_glass{
+  background: #ff3f3f36;
+  border: 2px solid rgba(248, 148, 148, 0.7);
+  color: #ffffff;
+}
