--- a/src/components/RenderTextBox/renderTextBox.scss
+++ b/src/components/RenderTextBox/renderTextBox.scss
@@ -1,14 +1,56 @@
 
+.word-view{
+  .letter{
+    color: #393939;
+    background: transparent !important;
+    min-width: 0;
+    width: 5px;
+    margin: 0 2.5px;
+    font-weight: 500 !important;
+  }
+  .white-space{
+    width: 15px;
+    // margin: 0 8px !important;
+  }
+  .active-letter{
+    color: deeppink;
+    position: relative;
+    display: flex;
+    .cursor{
+      display: block;
+      width: 20px !important;
+      height: 3px;
+      bottom: 0;
+      background: red;
+      animation: loop 1.5s ease-out infinite;
+    }
+  }
+}
+
+.letter-view{
+  .letter{
+    margin: 1px;
+    color: #393939;
+    background: #ffffff3b;
+    width: 10px !important;
+    margin-top: 15px;
+    min-width: 41px;
+    border-radius: 5px;
+  }
+}
+
 .para-text-box{
   box-shadow: 0 0 12px 6px #b6bdff40;
   box-sizing: border-box;
   position: relative;
   z-index: 100;
   padding: 10px;
-  background: #ffffff38;
   width: 100%;
   cursor: pointer;
   border-radius: 10px;
+  background: white;
+  padding: 10px;
+  backdrop-filter: blur(12px);
   border: 3px solid #e1e1e1;
   transition: all .3s ease-in;
   &.active-border{
@@ -31,12 +73,8 @@
     //font-weight: 700;
     //width: 40px;
     color: #393939;
-    margin: 1px;
-    margin-top: 15px;
-    border-radius: 5px;
     display: flex;
     background: #ffffff3b;
-    min-width: 41px;
     font-family: Roboto;
     text-align: center;
     justify-content: center;
@@ -71,17 +109,18 @@
     }
   }
 }
-.word-view{
-  .letter{
-    //font-size: 25px;
-    font-weight: 500;
-    width: 20px;
-  }
-  .active-letter{
-    .cursor{
-      display: block;
-      width: 20px;
-      height: 3px;
-    }
-  }
-}
+
+// .word-view{
+//   .letter{
+//     //font-size: 25px;
+//     font-weight: 500;
+//     width: 20px;
+//   }
+//   .active-letter{
+//     .cursor{
+//       display: block;
+//       width: 20px;
+//       height: 3px;
+//     }
+//   }
+// }]
